# Django_Hospital

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml  pytest.ini
appointments/: models.py  serializers.py  services.py  test_services.py  views.py
appointments/migrations/: 0001_initial.py
django_hospital/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
doctors/: models.py  serializers.py  services.py  test_serivces.py  views.py
doctors/migrations/: 0001_initial.py  0002_specialty_doctor_specialties_workinghour.py  0002_workinghour_break_end_time_and_more.py  0003_alter_workinghour_unique_together.py  0003_doctor_hospital_name.py  0004_nonreimbursement_doctor_non_reimbursements.py
patients/: models.py
patients/migrations/: 0001_initial.py  0002_alter_patient_name.py
